<resources>
    <string name="app_name">TeamTaskBoard</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="project_activity">Your Projects</string>

    <string name="facebook_app_id">500545806995257</string>
    <string name="fb_login_protocol_scheme">fb500545806995257</string>
    <string name="project_name_hint">Project name</string>
    <string name="add_project_label">Add new project</string>
    <string name="add_project_button">Add Project</string>
    <string name="add_project_menu">Add Project</string>
    <string name="log_out_menu">Log out</string>
    <string name="add_backlog_item_label">Add new Backlog item</string>
    <string name="backlog_item_title_hint">Backlog item title</string>
    <string name="add_backlog_item_button">Add Backlog item</string>
    <string name="edit_backlog_item_label">Edit Backlog item</string>
    <string name="edit_backlog_item_button">Edit Backlog item</string>
    <string name="add_backlog_item_menu">Add Backlog item</string>
    <string name="delete_backlog_item_menu">Delete Backlog item</string>
    <string name="edit_project_label">Edit Project</string>
    <string name="edit_project_button">Edit Project</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add_new_task">Add new Task</string>
    <string name="task_title_hint">Task title</string>
    <string name="task_description_hint">Task Description</string>
    <string name="add_task_button">Add Task</string>
    <string name="add_task_menu">Add task</string>
    <string name="edit_task_label">Edit Task</string>
    <string name="edit_task_button">Edit Task</string>
    <string name="login_app_name">Team Task Board</string>
</resources>
