<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kmitl.taweewong.teamtaskboard.controllers.fragments.AddProjectFragment">

    <TextView
        android:id="@+id/projectNameTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_project_label"
        android:textColor="@color/colorPrimary"
        android:labelFor="@+id/projectNameEditText"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/projectNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:textSize="22sp"
        android:hint="@string/project_name_hint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectNameTextLabel" />

    <Button
        android:id="@+id/addProjectButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/add_project_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
